--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@uiw/react-codemirror": "^4.21.18",
     "codemirror": "^6.0.1",
     "firebase": "^10.4.0",
+    "install": "^0.13.0",
+    "npm": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "react-select": "^5.7.5"
+    "react-select": "^5.7.5",
+    "use-state-with-callback": "^3.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
