--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@codemirror/lang-cpp": "^6.0.2",
     "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-python": "^6.1.3",
+    "@monaco-editor/react": "^4.6.0",
     "@uiw/codemirror-theme-vscode": "^4.21.18",
     "@uiw/react-codemirror": "^4.21.18",
     "codemirror": "^6.0.1",
