--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-python": "^6.1.3",
     "@monaco-editor/react": "^4.6.0",
+    "@uiw/codemirror-theme-github": "^4.21.20",
     "@uiw/codemirror-theme-vscode": "^4.21.18",
     "@uiw/react-codemirror": "^4.21.18",
     "codemirror": "^6.0.1",
@@ -22,8 +23,11 @@
     "npm": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.0",
     "react-router-dom": "^6.16.0",
     "react-select": "^5.7.5",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "use-state-with-callback": "^3.0.2"
   },
   "devDependencies": {
