--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "codemirror": "^6.0.1",
     "firebase": "^10.4.0",
     "install": "^0.13.0",
+    "notyf": "^3.10.0",
     "npm": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
